[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/map/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://camera/movable_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://map_env.tres" type="Environment" id=3]
[ext_resource path="res://menu/editor/editor.gd" type="Script" id=4]
[ext_resource path="res://menu/editor/ui/ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tile_higlight/tile_highlight.tscn" type="PackedScene" id=6]

[node name="editor" type="Node"]
script = ExtResource( 4 )

[node name="ui" parent="." instance=ExtResource( 5 )]

[node name="movable_camera" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 5 )

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0 )
shadow_enabled = true
directional_shadow_mode = 0

[node name="tile_highlight" parent="." instance=ExtResource( 6 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="on_change_range" from="ui" to="." method="_on_ui_on_change_range"]
[connection signal="on_randomize_map" from="ui" to="." method="_on_ui_on_randomize_map"]
[connection signal="on_save_map" from="ui" to="." method="_on_ui_on_save_map"]
[connection signal="on_tile_card_cancel" from="ui" to="." method="_on_ui_on_tile_card_cancel"]
[connection signal="on_tile_card_draging" from="ui" to="." method="_on_ui_on_tile_card_draging"]
[connection signal="on_tile_card_grab" from="ui" to="." method="_on_ui_on_tile_card_grab"]
[connection signal="on_tile_card_release" from="ui" to="." method="_on_ui_on_tile_card_release"]
[connection signal="on_tile_click" from="map" to="." method="_on_map_on_tile_click"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
